default/objects/FieldSalesTerritory_General_Settings__c/FieldSalesTerritory_General_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>FieldSalesTerritory General Settings</label>
</CustomObject>