default/objects/FieldSalesTerritory_General_Settings__c/fields/exludeOppOwnersId__c.field-meta.xml
<CustomField>
    <fullName>exludeOppOwnersId__c</fullName>
    <label>exludeOppOwnersId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>