default/objects/FieldSalesTerritory_General_Settings__c/fields/FS_Admins_Ids__c.field-meta.xml
<CustomField>
    <fullName>FS_Admins_Ids__c</fullName>
    <label>FS Admins Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>