default/objects/FieldSalesTerritory_General_Settings__c/fields/Geocoder_Request_Account_Filter__c.field-meta.xml
<CustomField>
    <fullName>Geocoder_Request_Account_Filter__c</fullName>
    <label>Geocoder Request Account Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>