default/objects/FieldSalesTerritory_General_Settings__c/fields/Geocoder_Request_Record_Limit__c.field-meta.xml
<CustomField>
    <fullName>Geocoder_Request_Record_Limit__c</fullName>
    <label>Geocoder Request Record Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>