default/objects/FieldSalesTerritory_General_Settings__c/fields/Google_Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Google_Api_Key__c</fullName>
    <label>Google Api Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>