default/objects/FieldSalesTerritory_General_Settings__c/fields/Penalty_for_Refusal_Telesales__c.field-meta.xml
<CustomField>
    <fullName>Penalty_for_Refusal_Telesales__c</fullName>
    <label>Penalty_for_Refusal_Telesales</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>