default/objects/FieldSalesTerritory_General_Settings__c/fields/Yandex_Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Yandex_Api_Key__c</fullName>
    <label>Yandex Api Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>